--- a/popfeast-pwa/vercel.json
+++ b/popfeast-pwa/vercel.json
@@ -3,6 +3,9 @@
 	"buildCommand": "npm run build",
 	"outputDirectory": "dist",
 	"devCommand": "npm run dev",
-	"ignoreCommand": "",
-	"regions": ["iad1"]
+	"regions": ["iad1"],
+	"rewrites": [
+		{ "source": "/api/(.*)", "destination": "/api/$1" },
+		{ "source": "/(.*)", "destination": "/" }
+	]
 }
