--- a/popfeast-pwa/vercel.json
+++ b/popfeast-pwa/vercel.json
@@ -4,8 +4,8 @@
 	"outputDirectory": "dist",
 	"devCommand": "npm run dev",
 	"regions": ["iad1"],
-	"rewrites": [
-		{ "source": "/api/(.*)", "destination": "/api/$1" },
-		{ "source": "/(.*)", "destination": "/" }
+	"routes": [
+		{ "src": "/api/(.*)", "dest": "/api/$1" },
+		{ "src": "/(.*)", "dest": "/index.html" }
 	]
 }
