--- a/popfeast-pwa/vercel.json
+++ b/popfeast-pwa/vercel.json
@@ -5,6 +5,7 @@
 	"devCommand": "npm run dev",
 	"regions": ["iad1"],
 	"rewrites": [
+		{ "source": "/api/(.*)", "destination": "/api/$1" },
 		{ "source": "/(.*)", "destination": "/" }
 	]
 }
