--- a/popfeast-pwa/vercel.json
+++ b/popfeast-pwa/vercel.json
@@ -5,8 +5,7 @@
   "devCommand": "npm run dev",
   "regions": ["iad1"],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://popfeast.vercel.app/api/$1" },
-    { "source": "/xapi/(.*)", "destination": "https://popfeast.vercel.app/api/$1" },
-    { "source": "/((?!api/|xapi/).*)", "destination": "/" }
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
