--- a/popfeast-pwa/vercel.json
+++ b/popfeast-pwa/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
+  "devCommand": "npm run start",
   "regions": ["iad1"],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
