--- a/popfeast-api/package.json
+++ b/popfeast-api/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "node -e \"console.log('Serverless functions are run by Vercel. Use vercel dev for local.');\""
+    "start": "node -e \"console.log('Run `vercel dev` to start local serverless functions.');\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0"
